// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcContainer > should make the navigation collapsable when isCollapsable is given 1`] = `
<div
  class="ec-container"
  data-test="ec-container"
>
  <div
    class="ec-container__navigation ec-container__navigation--is-collapsable"
    data-test="ec-container__navigation"
  >
    
    
  </div>
  <div
    class="ec-container__content"
    data-test="ec-container__content"
  >
    
    
  </div>
</div>
`;

exports[`EcContainer > should not have a collapsable navigation by default 1`] = `
<div
  class="ec-container"
  data-test="ec-container"
>
  <div
    class="ec-container__navigation"
    data-test="ec-container__navigation"
  >
    
    
  </div>
  <div
    class="ec-container__content"
    data-test="ec-container__content"
  >
    
    
  </div>
</div>
`;

exports[`EcContainer > should render empty if no slots were given 1`] = `
<div
  class="ec-container"
  data-test="ec-container"
>
  <div
    class="ec-container__navigation"
    data-test="ec-container__navigation"
  >
    
    
  </div>
  <div
    class="ec-container__content"
    data-test="ec-container__content"
  >
    
    
  </div>
</div>
`;

exports[`EcContainer > should render slot for content 1`] = `
<div
  class="ec-container"
  data-test="ec-container"
>
  <div
    class="ec-container__navigation"
    data-test="ec-container__navigation"
  >
    
    
  </div>
  <div
    class="ec-container__content"
    data-test="ec-container__content"
  >
    
    <div>
      content template
    </div>
    
  </div>
</div>
`;

exports[`EcContainer > should render slot for navigation 1`] = `
<div
  class="ec-container"
  data-test="ec-container"
>
  <div
    class="ec-container__navigation"
    data-test="ec-container__navigation"
  >
    
    <div>
      navigation template
    </div>
    
  </div>
  <div
    class="ec-container__content"
    data-test="ec-container__content"
  >
    
    
  </div>
</div>
`;
